--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=EricksBLog
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=erick
+spring.datasource.password=erick
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
