--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=EricksBLog
+server.port=8079
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=erick
 spring.datasource.password=erick
