--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ server.port=8079
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=erick
 spring.datasource.password=erick
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
