--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,15 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+		  <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+    </dependency>
+     <dependency>
+    <groupId>org.thymeleaf</groupId>
+    <artifactId>thymeleaf</artifactId>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
